pkg/dsl/aspida_parser.go
// Code generated from aspida.g4 by ANTLR 4.8. DO NOT EDIT.

package dsl // aspida

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "':'", "'{'", "'}'", "'name'", "'NAME'", "'connection'", "'CONNECTION'",
	"'description'", "'DESCRIPTION'", "'['", "','", "']'", "'sections'", "'SECTIONS'",
	"'points'", "'POINTS'", "'controls'", "'CONTROLS'", "'exclusions'", "'EXCLUSIONS'",
	"'true'", "'false'", "'null'", "'::'", "", "", "", "", "", "", "", "",
	"", "", "", "';'", "'MAIN'", "'HOSTS'", "'TASKS'", "'VARS'", "'LOCAL'",
	"'SSH'", "'SSH-PASSWORD'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "COMMENT", "WHITESPACE", "NEWLINE", "STRING",
	"NUMBER", "DIGIT", "HEX_CHAR", "NUMBER_RANGE", "ARROW", "SINGLE_IP", "IP_RANGE",
	"NS", "MAIN_KW", "HOSTS_KW", "TASKS_KW", "VARS_KW", "LOCAL_KW", "SSH_KW",
	"SSHPASS_KW",
}

var ruleNames = []string{
	"program", "main", "hosts", "tasks", "variables", "main_content", "main_prop",
	"name", "connection", "description", "hosts_list", "host", "tasks_content",
	"tasks_prop", "sections", "points", "controls", "exclusions", "vars_content",
	"vars_prop", "value", "str_array", "cadena", "array", "ip_v4", "single_ip",
	"ip_range", "ip_v6", "h16", "ls32", "hexdigit",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type aspidaParser struct {
	*antlr.BaseParser
}

func NewaspidaParser(input antlr.TokenStream) *aspidaParser {
	this := new(aspidaParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "aspida.g4"

	return this
}

// aspidaParser tokens.
const (
	aspidaParserEOF          = antlr.TokenEOF
	aspidaParserT__0         = 1
	aspidaParserT__1         = 2
	aspidaParserT__2         = 3
	aspidaParserT__3         = 4
	aspidaParserT__4         = 5
	aspidaParserT__5         = 6
	aspidaParserT__6         = 7
	aspidaParserT__7         = 8
	aspidaParserT__8         = 9
	aspidaParserT__9         = 10
	aspidaParserT__10        = 11
	aspidaParserT__11        = 12
	aspidaParserT__12        = 13
	aspidaParserT__13        = 14
	aspidaParserT__14        = 15
	aspidaParserT__15        = 16
	aspidaParserT__16        = 17
	aspidaParserT__17        = 18
	aspidaParserT__18        = 19
	aspidaParserT__19        = 20
	aspidaParserT__20        = 21
	aspidaParserT__21        = 22
	aspidaParserT__22        = 23
	aspidaParserT__23        = 24
	aspidaParserCOMMENT      = 25
	aspidaParserWHITESPACE   = 26
	aspidaParserNEWLINE      = 27
	aspidaParserSTRING       = 28
	aspidaParserNUMBER       = 29
	aspidaParserDIGIT        = 30
	aspidaParserHEX_CHAR     = 31
	aspidaParserNUMBER_RANGE = 32
	aspidaParserARROW        = 33
	aspidaParserSINGLE_IP    = 34
	aspidaParserIP_RANGE     = 35
	aspidaParserNS           = 36
	aspidaParserMAIN_KW      = 37
	aspidaParserHOSTS_KW     = 38
	aspidaParserTASKS_KW     = 39
	aspidaParserVARS_KW      = 40
	aspidaParserLOCAL_KW     = 41
	aspidaParserSSH_KW       = 42
	aspidaParserSSHPASS_KW   = 43
)

// aspidaParser rules.
const (
	aspidaParserRULE_program       = 0
	aspidaParserRULE_main          = 1
	aspidaParserRULE_hosts         = 2
	aspidaParserRULE_tasks         = 3
	aspidaParserRULE_variables     = 4
	aspidaParserRULE_main_content  = 5
	aspidaParserRULE_main_prop     = 6
	aspidaParserRULE_name          = 7
	aspidaParserRULE_connection    = 8
	aspidaParserRULE_description   = 9
	aspidaParserRULE_hosts_list    = 10
	aspidaParserRULE_host          = 11
	aspidaParserRULE_tasks_content = 12
	aspidaParserRULE_tasks_prop    = 13
	aspidaParserRULE_sections      = 14
	aspidaParserRULE_points        = 15
	aspidaParserRULE_controls      = 16
	aspidaParserRULE_exclusions    = 17
	aspidaParserRULE_vars_content  = 18
	aspidaParserRULE_vars_prop     = 19
	aspidaParserRULE_value         = 20
	aspidaParserRULE_str_array     = 21
	aspidaParserRULE_cadena        = 22
	aspidaParserRULE_array         = 23
	aspidaParserRULE_ip_v4         = 24
	aspidaParserRULE_single_ip     = 25
	aspidaParserRULE_ip_range      = 26
	aspidaParserRULE_ip_v6         = 27
	aspidaParserRULE_h16           = 28
	aspidaParserRULE_ls32          = 29
	aspidaParserRULE_hexdigit      = 30
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = aspidaParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = aspidaParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Main() IMainContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMainContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMainContext)
}

func (s *ProgramContext) Hosts() IHostsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IHostsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IHostsContext)
}

func (s *ProgramContext) Tasks() ITasksContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITasksContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITasksContext)
}

func (s *ProgramContext) Variables() IVariablesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariablesContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVariablesContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *aspidaParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, aspidaParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(62)
		p.Main()
	}
	{
		p.SetState(63)
		p.Hosts()
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == aspidaParserTASKS_KW {
		{
			p.SetState(64)
			p.Tasks()
		}

	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == aspidaParserVARS_KW {
		{
			p.SetState(67)
			p.Variables()
		}

	}

	return localctx
}

// IMainContext is an interface to support dynamic dispatch.
type IMainContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMainContext differentiates from other interfaces.
	IsMainContext()
}

type MainContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainContext() *MainContext {
	var p = new(MainContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = aspidaParserRULE_main
	return p
}

func (*MainContext) IsMainContext() {}

func NewMainContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainContext {
	var p = new(MainContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = aspidaParserRULE_main

	return p
}

func (s *MainContext) GetParser() antlr.Parser { return s.parser }

func (s *MainContext) MAIN_KW() antlr.TerminalNode {
	return s.GetToken(aspidaParserMAIN_KW, 0)
}

func (s *MainContext) Main_content() IMain_contentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMain_contentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMain_contentContext)
}

func (s *MainContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.EnterMain(s)
	}
}

func (s *MainContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.ExitMain(s)
	}
}

func (s *MainContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitMain(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *aspidaParser) Main() (localctx IMainContext) {
	localctx = NewMainContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, aspidaParserRULE_main)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Match(aspidaParserMAIN_KW)
	}
	{
		p.SetState(71)
		p.Match(aspidaParserT__0)
	}
	{
		p.SetState(72)
		p.Match(aspidaParserT__1)
	}
	{
		p.SetState(73)
		p.Main_content()
	}
	{
		p.SetState(74)
		p.Match(aspidaParserT__2)
	}

	return localctx
}

// IHostsContext is an interface to support dynamic dispatch.
type IHostsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsHostsContext differentiates from other interfaces.
	IsHostsContext()
}

type HostsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHostsContext() *HostsContext {
	var p = new(HostsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = aspidaParserRULE_hosts
	return p
}

func (*HostsContext) IsHostsContext() {}

func NewHostsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HostsContext {
	var p = new(HostsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = aspidaParserRULE_hosts

	return p
}

func (s *HostsContext) GetParser() antlr.Parser { return s.parser }

func (s *HostsContext) HOSTS_KW() antlr.TerminalNode {
	return s.GetToken(aspidaParserHOSTS_KW, 0)
}

func (s *HostsContext) Hosts_list() IHosts_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IHosts_listContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IHosts_listContext)
}

func (s *HostsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HostsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *HostsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.EnterHosts(s)
	}
}

func (s *HostsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.ExitHosts(s)
	}
}

func (s *HostsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitHosts(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *aspidaParser) Hosts() (localctx IHostsContext) {
	localctx = NewHostsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, aspidaParserRULE_hosts)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.Match(aspidaParserHOSTS_KW)
	}
	{
		p.SetState(77)
		p.Match(aspidaParserT__0)
	}
	{
		p.SetState(78)
		p.Hosts_list()
	}

	return localctx
}

// ITasksContext is an interface to support dynamic dispatch.
type ITasksContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTasksContext differentiates from other interfaces.
	IsTasksContext()
}

type TasksContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTasksContext() *TasksContext {
	var p = new(TasksContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = aspidaParserRULE_tasks
	return p
}

func (*TasksContext) IsTasksContext() {}

func NewTasksContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TasksContext {
	var p = new(TasksContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = aspidaParserRULE_tasks

	return p
}

func (s *TasksContext) GetParser() antlr.Parser { return s.parser }

func (s *TasksContext) TASKS_KW() antlr.TerminalNode {
	return s.GetToken(aspidaParserTASKS_KW, 0)
}

func (s *TasksContext) Tasks_content() ITasks_contentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITasks_contentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITasks_contentContext)
}

func (s *TasksContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TasksContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TasksContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.EnterTasks(s)
	}
}

func (s *TasksContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.ExitTasks(s)
	}
}

func (s *TasksContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitTasks(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *aspidaParser) Tasks() (localctx ITasksContext) {
	localctx = NewTasksContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, aspidaParserRULE_tasks)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(80)
		p.Match(aspidaParserTASKS_KW)
	}
	{
		p.SetState(81)
		p.Match(aspidaParserT__0)
	}
	{
		p.SetState(82)
		p.Match(aspidaParserT__1)
	}
	{
		p.SetState(83)
		p.Tasks_content()
	}
	{
		p.SetState(84)
		p.Match(aspidaParserT__2)
	}

	return localctx
}

// IVariablesContext is an interface to support dynamic dispatch.
type IVariablesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVariablesContext differentiates from other interfaces.
	IsVariablesContext()
}

type VariablesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVariablesContext() *VariablesContext {
	var p = new(VariablesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = aspidaParserRULE_variables
	return p
}

func (*VariablesContext) IsVariablesContext() {}

func NewVariablesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VariablesContext {
	var p = new(VariablesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = aspidaParserRULE_variables

	return p
}

func (s *VariablesContext) GetParser() antlr.Parser { return s.parser }

func (s *VariablesContext) VARS_KW() antlr.TerminalNode {
	return s.GetToken(aspidaParserVARS_KW, 0)
}

func (s *VariablesContext) Vars_content() IVars_contentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVars_contentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVars_contentContext)
}

func (s *VariablesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VariablesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VariablesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.EnterVariables(s)
	}
}

func (s *VariablesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.ExitVariables(s)
	}
}

func (s *VariablesContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitVariables(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *aspidaParser) Variables() (localctx IVariablesContext) {
	localctx = NewVariablesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, aspidaParserRULE_variables)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(86)
		p.Match(aspidaParserVARS_KW)
	}
	{
		p.SetState(87)
		p.Match(aspidaParserT__0)
	}
	{
		p.SetState(88)
		p.Match(aspidaParserT__1)
	}
	{
		p.SetState(89)
		p.Vars_content()
	}
	{
		p.SetState(90)
		p.Match(aspidaParserT__2)
	}

	return localctx
}

// IMain_contentContext is an interface to support dynamic dispatch.
type IMain_contentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMain_contentContext differentiates from other interfaces.
	IsMain_contentContext()
}

type Main_contentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMain_contentContext() *Main_contentContext {
	var p = new(Main_contentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = aspidaParserRULE_main_content
	return p
}

func (*Main_contentContext) IsMain_contentContext() {}

func NewMain_contentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Main_contentContext {
	var p = new(Main_contentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = aspidaParserRULE_main_content

	return p
}

func (s *Main_contentContext) GetParser() antlr.Parser { return s.parser }

func (s *Main_contentContext) AllMain_prop() []IMain_propContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMain_propContext)(nil)).Elem())
	var tst = make([]IMain_propContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMain_propContext)
		}
	}

	return tst
}

func (s *Main_contentContext) Main_prop(i int) IMain_propContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMain_propContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMain_propContext)
}

func (s *Main_contentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Main_contentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Main_contentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.EnterMain_content(s)
	}
}

func (s *Main_contentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.ExitMain_content(s)
	}
}

func (s *Main_contentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitMain_content(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *aspidaParser) Main_content() (localctx IMain_contentContext) {
	localctx = NewMain_contentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, aspidaParserRULE_main_content)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(92)
		p.Main_prop()
	}
	p.SetState(96)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<aspidaParserT__3)|(1<<aspidaParserT__4)|(1<<aspidaParserT__5)|(1<<aspidaParserT__6)|(1<<aspidaParserT__7)|(1<<aspidaParserT__8))) != 0 {
		{
			p.SetState(93)
			p.Main_prop()
		}

		p.SetState(98)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IMain_propContext is an interface to support dynamic dispatch.
type IMain_propContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMain_propContext differentiates from other interfaces.
	IsMain_propContext()
}

type Main_propContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMain_propContext() *Main_propContext {
	var p = new(Main_propContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = aspidaParserRULE_main_prop
	return p
}

func (*Main_propContext) IsMain_propContext() {}

func NewMain_propContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Main_propContext {
	var p = new(Main_propContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = aspidaParserRULE_main_prop

	return p
}

func (s *Main_propContext) GetParser() antlr.Parser { return s.parser }

func (s *Main_propContext) NS() antlr.TerminalNode {
	return s.GetToken(aspidaParserNS, 0)
}

func (s *Main_propContext) Name() INameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INameContext)
}

func (s *Main_propContext) Connection() IConnectionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConnectionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConnectionContext)
}

func (s *Main_propContext) Description() IDescriptionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDescriptionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDescriptionContext)
}

func (s *Main_propContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Main_propContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Main_propContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(aspidaListener); ok {
		listenerT.EnterMain_prop(s)
	}
}
